--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <p class="cite">What we Do?</p>
               </div>
               <div class="span8">
-                <p class="alignright">We Build tools/apps to solve surrounding problems & We make the lifes better</p>
+                <p class="alignright">We Build tools/apps to solve surrounding problems & We make life better</p>
               </div>
             </blockquote>
           </div>
