--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <ul id="menu-main" class="nav">
                 <li><a title="Who are we?" href="#about">Who are we?</a></li>
                 <li><a title="What we do?" href="#testimonials">What we do?</a></li>
-                <li><a title="Projects" href="#news">Projects</a></li>
+                <li><a title="Projects" href="http://github.com/SDM-OS">Projects</a></li>
                 <li><a title="Support Us" href="#team">Support us</a></li>
                 <li><a title="Contact" href="#team">Contact</a></li>
                 
