--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="container">
         <footer>
           <small>CodeforGood.</small><br/>
-          <small>Made with &#10084; in Dharwad</small>
+          <small>A Project by <a href="http://shashisp.github.io">shashisp</small>
         </footer>
       </div>
       <!-- ./container -->
