--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="span12">
               
 
-              <a href="https://docs.google.com/forms/d/1LdJukakPwKxzM9zi3Gy4lhCmbxuIN4JPKozCY2kliTE/viewform"><input type="submit" value="Get Involved >>" class="cform-submit"></a>
+              <a href="http://codeforgood.herokuapp.com/"><input type="submit" value="Get Involved >>" class="cform-submit"></a>
               
             </div>
           </div>
